<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/weigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="textPersonName|number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="206dp"
        android:text="@string/send"
        android:onClick="bim"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="323dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="51dp"
        android:text="@string/daan"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="421dp" />

    <TextView
        android:id="@+id/daan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="210dp"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="440dp" />

    <EditText
        android:id="@+id/hight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/hight"
        android:inputType="textPersonName|number"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="141dp" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="163dp"
        android:text=""
        android:textSize="24sp" />

</RelativeLayout>